samples/_failures_safe/1761451353_548cdc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_226b533e.c:155:1: error: expected identifier or ‘(’ at end of input
  155 | int
      | ^~~
